--- a/.github/workflows/publish_beta_discord.yml
+++ b/.github/workflows/publish_beta_discord.yml
@@ -1,9 +1,7 @@
 
 name: Publish Beta on Discord
 
-on:
-  push:
-    branches: [ "master" ]
+on: [ pull_request, workflow_dispatch, push ]
 
 jobs:
   build:
