fix: publish_beta_discord.yml

--- a/.github/workflows/publish_beta_discord.yml
+++ b/.github/workflows/publish_beta_discord.yml
@@ -1,9 +1,17 @@
-
-name: Publish Beta on Discord
+name: Automated donator builds
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "master" ]
+    paths:
+      - src/**
+      - build.gradle
+      - gradle.properties
+      - settings.gradle
+      - gradle/**
+      - gradlew
+      - gradlew.bat
+      - versioning.gradle
 
 jobs:
   build:
@@ -30,8 +38,8 @@ jobs:
 
       - name: Build
         run: ./gradlew build
-        #env:
-        #  BETA: 1 # exclude assets if it's a beta dev build
+          #env:
+          #  BETA: 1 # exclude assets if it's a beta dev build
 
       - name: Publish artifacts
         uses: DrTheodor/discord-webhook-upload-action@v1.2
