feat: no more fuckass single class for Registries

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
             artifact() // Look directly for artifact
         }
     }
+
+    maven { url "https://theo.is-a.dev/maven-repo/" }
 }
 
 fabricApi {
@@ -44,7 +46,7 @@ dependencies {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    include(modImplementation("com.github.DrTheodor:mc-scheduler:${project.scheduler_version}")) {
+    include(modImplementation("dev.drtheo:scheduler:${project.scheduler_version}")) {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
