--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ archives_base_name=timeless
 # Dependencies
 fabric_version=0.92.2+1.20.1
 sakitus_version=1.1.8
-scheduler_version = main-SNAPSHOT
+scheduler_version = 1.1.0
