ci: bring over some workflows from AIT

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,12 @@
-name: Publish to Modrinth
+name: Publish on GitHub, Modrinth, and CurseForge
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
+  workflow_run:
+    workflows:
+      - Generate Changelog
+    types:
+      - completed
 
 env:
   JAVA_VERSION: 17
@@ -14,6 +17,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/release'
     steps:
       - name: Check Environment Variables
         run: env
@@ -43,13 +47,13 @@ jobs:
         uses: Kir-Antipov/mc-publish@v3.3                                   #The specified MC-Publish GitHub Action in the version 3.2
         with:
           changelog-file: CHANGELOG.md
-          # curseforge-id: 856138                                             #The id of your CurseForge project
-          # curseforge-token: "${{secrets.CURSEFORGE_TOKEN}}"
+          curseforge-id: 856138                                             #The id of your CurseForge project
+          curseforge-token: "${{secrets.CURSEFORGE_TOKEN}}"
 
-          modrinth-id: CHANGE_ME_TO_ID                                             #The id of your modrinth project
+          modrinth-id: ZMP9ZjB9                                             #The id of your modrinth project
           modrinth-token: "${{secrets.MODRINTH_TOKEN}}"
 
-          #          github-token: "${{secrets.GITHUB_TOKEN}}"
+          github-token: "${{secrets.GITHUB_TOKEN}}"
 
           github-generate-changelog: true
           version-type: release
