fix(ci): "main" is "master" on this repo

--- a/versioning.gradle
+++ b/versioning.gradle
@@ -12,7 +12,7 @@ ext.getCurrentVersion = {
             qualifier = null
         }
 
-        if (branch == "main") {
+        if (branch == "master") {
             branch = null
         }
     }
