--- a/.github/workflows/append_changelog.yml
+++ b/.github/workflows/append_changelog.yml
@@ -3,7 +3,7 @@ name: Update Changelog
 on:
   pull_request:
     types: [closed]
-    branches: [main]
+    branches: [master]
   workflow_dispatch:
     inputs:
       pr_numbers:
