--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,4 @@ archives_base_name=timeless
 
 # Dependencies
 fabric_version=0.92.2+1.20.1
-sakitus_version=1.1.8
-scheduler_version = 1.1.0
+sakitus_version=1.1.9-1.20.1-beta
